--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,33 @@ repositories {
 dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.26.0'
     implementation 'org.testng:testng:7.11.0'
+    implementation 'ch.qos.logback:logback-classic:1.5.18'
 }
 
 test {
     useTestNG()
+}
+task qa(type: Test) {
+    useTestNG()
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+}
+task qa1(type: Test) {
+    useTestNG() {
+        def suites1 = project.hasProperty("suite1")
+        def suites2 = project.hasProperty("suite2")
+        def suites3 = project.hasProperty("suite3")
+        if (suites1) {
+            suites 'srs/test/resources/testng.xml'
+        } else if (suites2) {
+            suites 'src/test/resources/smoky.xml'
+        } else if (suites3) {
+            suites 'src/test/resources/negative.xml'
+        }
+
+    }
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
 }
